<resources>
    <string name="app_name">Android-SPD-111</string>

    <!-- MAIN ACTIVITY -->
    <string name="main_tv_title">Android</string>
    <string name="main_btn_calc">Calculator</string>
    <string name="main_btn_chat">Net.Chat</string>
    <string name="main_btn_anim">Animation</string>

    <!-- region CHAT ACTIVITY-->
    <string name="chat_scroller_description">Chat messages</string>
    <!--endregion-->
    <!-- region GAME ACTIVITY-->
    <string name="main_btn_game">Swipe.Game</string>
    <string name="score_view">Score:</string>
    <string name="score_view_result">0</string>
    <!--endregion-->
    <!-- region CALC ACTIVITY -->
    <string name="symbol_sqr">\u221A</string>

    <string name="calc_tv_title">Calculator</string>
    <string name="calc_btn_percent">%</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_ce">CE</string>
    <string name="calc_btn_backspace">\u232B</string>


    <string name="calc_btn_inverse">\u00B9/\u2093</string>
    <string name="calc_btn_square">x\u00B2</string>
    <string name="calc_btn_sqrt">\u221Ax</string>
    <string name="calc_btn_divide">\u00F7</string>


    <string name="calc_btn_multiply">\u00D7</string>
    <string name="calc_btn_subtract">\u002D</string>
    <string name="calc_btn_add">\u002B</string>


    <string name="calc_btn_0">0</string>
    <string name="calc_btn_1">1</string>
    <string name="calc_btn_2">2</string>
    <string name="calc_btn_3">3</string>
    <string name="calc_btn_4">4</string>
    <string name="calc_btn_5">5</string>
    <string name="calc_btn_6">6</string>
    <string name="calc_btn_7">7</string>
    <string name="calc_btn_8">8</string>
    <string name="calc_btn_9">9</string>

    <string name="calc_btn_plusMinus">\u207A/\u02D7</string>
    <string name="calc_btn_comma">\u002C</string>
    <string name="calc_btn_equal">\u003D</string>

    <string name='calc_limit_exceeded'>Limit exceeded</string>
    <string name='calc_zero_division'>Division by zero</string>
    <!-- endregion -->

    <!-- region ANIM ACTIVITY -->
    <string name="anim_title">Animations</string>
    <string name="anim_opacity_title">Opacity</string>
    <string name="anim_size_title">Size</string>
    <string name="anim_arc_title">Rotate</string>
    <string name="anim_move_title">Move</string>
    <string name="anim_combo_title">Combo</string>

    <!--endregion-->
</resources>