<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/calc_bg"
    tools:context=".CalcActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/calc_fg"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:text="@string/calc_tv_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/calc_history_bg"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:textSize="30sp"

        tools:text="25 x 3 = "/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textColor="@color/calc_fg"
        android:textSize="60sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        tools:text="75"/>

    <TableLayout
        android:layout_marginTop="40dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="4dp">

        <TableRow
            style="@style/calc_row_btn">

            <Button
                android:id="@+id/calc_btn_percent"
                android:text="@string/calc_btn_percent"
                style="@style/calc_func_btn"
                />
            <Button
                android:id="@+id/calc_btn_ce"
                style="@style/calc_func_btn"
                android:text="@string/calc_btn_ce" />
            <Button
                android:id="@+id/calc_btn_c"
                style="@style/calc_func_btn"
                android:text="@string/calc_btn_c" />

            <Button
                android:id="@+id/calc_btn_backspace"
                style="@style/calc_func_btn"
                android:text="@string/calc_btn_backspace" />
        </TableRow>

        <TableRow
            style="@style/calc_row_btn" >

            <Button
                android:id="@+id/calc_btn_inverse"
                android:text="@string/calc_btn_inverse"
                style="@style/calc_func_btn"
                />
            <Button
                android:id="@+id/calc_btn_square"
                style="@style/calc_func_btn"
                android:text="@string/calc_btn_square" />
            <Button
                android:id="@+id/calc_btn_sqrt"
                style="@style/calc_func_btn"
                android:text="@string/calc_btn_sqrt" />

            <Button
                android:id="@+id/calc_btn_divide"
                style="@style/calc_func_btn"
                android:text="@string/calc_btn_divide" />
        </TableRow>

        <TableRow
            style="@style/calc_row_btn" >

            <Button
                android:id="@+id/calc_btn_7"
                android:text="@string/calc_btn_7"
                style="@style/calc_digit_btn"
                />
            <Button
                android:id="@+id/calc_btn_8"
                style="@style/calc_digit_btn"
                android:text="@string/calc_btn_8" />
            <Button
                android:id="@+id/calc_btn_9"
                style="@style/calc_digit_btn"
                android:text="@string/calc_btn_9" />

            <Button
                android:id="@+id/calc_btn_multiply"
                style="@style/calc_func_btn"
                android:text="@string/calc_btn_multiply" />
        </TableRow>
        <TableRow
            style="@style/calc_row_btn" >

            <Button
                android:id="@+id/calc_btn_4"
                android:text="@string/calc_btn_4"
                style="@style/calc_digit_btn"
                />
            <Button
                android:id="@+id/calc_btn_5"
                style="@style/calc_digit_btn"
                android:text="@string/calc_btn_5" />
            <Button
                android:id="@+id/calc_btn_6"
                style="@style/calc_digit_btn"
                android:text="@string/calc_btn_6" />

            <Button
                android:id="@+id/calc_btn_subtract"
                style="@style/calc_func_btn"
                android:text="@string/calc_btn_subtract" />
        </TableRow>

        <TableRow
            style="@style/calc_row_btn" >

            <Button
                android:id="@+id/calc_btn_1"
                android:text="@string/calc_btn_1"
                style="@style/calc_digit_btn"
                />
            <Button
                android:id="@+id/calc_btn_2"
                style="@style/calc_digit_btn"
                android:text="@string/calc_btn_2" />
            <Button
                android:id="@+id/calc_btn_3"
                style="@style/calc_digit_btn"
                android:text="@string/calc_btn_3" />

            <Button
                android:id="@+id/calc_btn_add"
                style="@style/calc_func_btn"
                android:text="@string/calc_btn_add" />
        </TableRow>

        <TableRow
            style="@style/calc_row_btn" >

            <Button
                android:id="@+id/calc_btn_plusMinus"
                android:text="@string/calc_btn_plusMinus"
                style="@style/calc_digit_btn"
                />
            <Button
                android:id="@+id/calc_btn_0"
                style="@style/calc_digit_btn"
                android:text="@string/calc_btn_0" />
            <Button
                android:id="@+id/calc_btn_comma"
                style="@style/calc_digit_btn"
                android:text="@string/calc_btn_comma" />

            <Button
                android:id="@+id/calc_btn_equal"
                style="@style/calc_equal_btn"
                android:text="@string/calc_btn_equal" />
        </TableRow>

    </TableLayout>

</LinearLayout>